# secret_santa

./: README.md  pyproject.toml  requirements.txt
instance/: config.py
secret_santa/: __init__.py  add_admin.py  admin_page.py  auth.py  db.py  email_script.py  emails.py  schema.sql  user_page.py
secret_santa/email/: google_mail.py  mail.py  quick_start.py
secret_santa/static/: style.css
secret_santa/templates/: base.html
secret_santa/templates/admin_page/: add_event.html  index.html
secret_santa/templates/auth/: login.html  register.html
secret_santa/templates/user_page/: index.html  update.html
tests/: test_secret_santa.py
