[tool.poetry]
name = "secret-santa"
version = "0.1.0"
description = ""
authors = ["hfa224 <helenffionadams@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-mailman = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
